--- a/roles/iptables/handlers/main.yml
+++ b/roles/iptables/handlers/main.yml
@@ -5,3 +5,7 @@
 
 - name: restart fail2ban
   service: name=fail2ban state=restarted
+
+- name: restart docker
+  service: name=docker state=restarted
+  when: inventory_hostname in groups.docker
