Set container names and set private network internal

--- a/roles/docker_server/files/inverseproxy.yaml
+++ b/roles/docker_server/files/inverseproxy.yaml
@@ -3,6 +3,7 @@ version: "2.1"
 services:
     proxy:
         image: traefik
+        container_name: inverseproxy
         networks:
             shared:
             private:
@@ -34,6 +35,7 @@ services:
 
     dockersocket:
         image: tecnativa/docker-socket-proxy
+        container_name: inverseproxy_socket
         privileged: true
         networks:
             private:
@@ -53,6 +55,7 @@ networks:
             encrypted: 1
 
     private:
+        internal: true
         driver_opts:
             encrypted: 1
 
