--- a/roles/docker_server/tasks/main.yml
+++ b/roles/docker_server/tasks/main.yml
@@ -8,11 +8,11 @@
 
 - name: Add Docker GPG key to APT
   apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
+    url: https://download.docker.com/linux/{{ ansible_distribution|lower }}/gpg
 
 - name: Add Docker repo to APT repositories
   apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu/ xenial stable
+    repo: deb [arch=amd64] https://download.docker.com/linux/{{ ansible_distribution|lower }}/ {{ ansible_distribution_release|lower }} stable
 
 - name: Remove old Docker packages if present
   apt: 
@@ -39,6 +39,22 @@
   - software-properties-common
   - docker-ce 
   - python-pip
+  when: not ansible_check_mode
+
+- name: Check installed OS packages
+  apt: 
+    name: "{{ item }}"
+    state: latest
+    update_cache: yes
+    force: yes
+  with_items:
+  - git 
+  - ca-certificates
+  - curl
+  - software-properties-common
+  - docker-ce 
+  - python-pip
+  when: ansible_check_mode
 
 - name: Install PythonPy docker packages
   pip:
