--- a/roles/iptables/handlers/main.yml
+++ b/roles/iptables/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: restore-iptables
-  shell: iptables-restore < /etc/iptables.conf
+  service: name=netfilter-persistent state=restarted
 
 - name: restart fail2ban
   service: name=fail2ban state=restarted
