--- a/roles/docker_server/tasks/main.yml
+++ b/roles/docker_server/tasks/main.yml
@@ -72,7 +72,7 @@
 
 - name: Create docker repo
   file:
-    name: "{{ docker_location }}backups"
+    name: "{{ docker_location }}"
     state: directory
     owner: root
     group: root
